fix - align artist sidebar item in center

--- a/artist-page.css
+++ b/artist-page.css
@@ -112,8 +112,8 @@ li {
   z-index: 1000;
   position: absolute;
   left: -10px;
-  bottom: 0px;
-  height: 33px;
+  bottom: -5px;
+  height: 150%;
   width: 2.5px;
 }
 
@@ -128,7 +128,7 @@ li {
 }
 .menu .col > a {
   display: flex;
-  align-content: center;
+  align-items: center;
 }
 .menu .col > a > img {
   width: 20px;
